kubernetes/apps/monitoring/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - goldilocks.mcgrath.nz
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
